--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     name: .NET 8 Application
     steps:
-        
-uses: actions/checkout@v3
-name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:# Semantic version range syntax or exact version of a dotnet version
-        dotnet-version: '8.0.101'
-run: dotnet build
-run: dotnet test
+        - uses: actions/checkout@v3
+        - name: Setup dotnet
+          uses: actions/setup-dotnet@v3
+          with:
+        # Semantic version range syntax or exact version of a dotnet version
+            dotnet-version: '8.0.101'
+        - run: dotnet build
+        - run: dotnet test
